Avance 11, Listado de Materias por estudiante